# bioinformatics-project

./: .gitignore  main.py  pyproject.toml  requirements.txt
data/Eukaryotes/Eukaryotes_mc_0/: edges_mc_0_aacu.csv  edges_mc_0_aaf.csv  nodes_mc_0_aacu.csv  nodes_mc_0_aaf.csv
