[project]
name = "bioinformatics-project"
version = "0.1.0"
description = "Using graph kernels to analyze species at the kingdom level."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "grakel",
    "pandas>=2.3.3",
]

[tool.uv.sources]
grakel = { git = "https://github.com/ysig/GraKeL" }
